--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -10,32 +10,29 @@
         <h1>Dasmoto's Arts & Crafts</h1>  
     </div>
     <div id="brushes">
-        <h2>Brushes</h2> 
+        <h2 class="brush">Brushes</h2> 
         <img src="/resources/hacksaw.jpeg" alt="Hacksaw Brushes"/>
         <h3>Hacksaw Brushes</h3>
         <p>Made of the highest quality oak, Hacksaw brushes are 
         known for their weight and ability to hold paint in 
         large amounts. Available in different sizes.
-        <p class="first">Starting at $3.00 / brush</p></p> 
-    </div>
+        <pa class="first">Starting at $3.00 / brush.</pa></p>
     <div id="frames">
-        <h2>Frames</h2>
+        <h2 class="frame">Frames</h2>
         <img src="/resources/frames.jpeg" alt="Art Frames"/>
         <h3>Art Frames (assorted)</h3>      
         <p>Assorted frames made of different material, including MDF, 
         birchwood, and PDE. Select frames can be sanded and painted 
-        according to your needs. 
-        <p class="second">Starting at $2.00 / frame</p></p> 
-    </div>
-    <div id="Paint">
-        <h2>Brushes</h2>
+        according to your needs.
+        <pa class="second">Starting at $2.00 / frame.</pa></p>
+    <div id="paint">
+        <h2 class="walanafinnishna">Paint</h2>
         <img src="/resources/finnish.jpeg" alt="Clean Finnish Paint"/>
         <h3>Clean Finnish Paint</h3>      
         <p>Imported paint from Finland. Over 256 colors available in-store, 
         varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds 
         to canvas, increasing the finish and longevity of any artwork. 
-        <p class="third">Starting at $5.00 / tube</p></p> 
+        <pa class="third">Starting at $5.00 / tube.</pa></p>
     </div>
-    <h6>&copy; Copyright © 2018 - Dasmoto's Arts & Crafts - All Rights Reserved</h6>
   </body>
 </html>
